AG-12307 - Fix API pages top header gap

--- a/packages/ag-charts-website/src/components/top-bar/ApiTopBar.module.scss
+++ b/packages/ag-charts-website/src/components/top-bar/ApiTopBar.module.scss
@@ -12,8 +12,9 @@
 }
 
 .controlsContainer {
-    padding-top: $spacing-size-2;
-    padding-bottom: $spacing-size-2;
+    display: flex;
+    align-items: center;
+    height: var(--tab-bar-height);
     padding-left: var(--layout-horizontal-margins);
     margin-left: auto;
     margin-right: auto;
